--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-battery",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "authors": [
     "Adrian de la Rosa <adrian@delarosab.me>"
   ],
@@ -15,8 +15,17 @@
   "main": "cordova-battery.html",
   "license": "https://raw.githubusercontent.com/adelarosab/cordova-battery/master/LICENSE",
   "homepage": "https://github.com/adelarosab/cordova-battery/",
+  "ignore": [
+    "/.*",
+    "/bower.json",
+    "/demo/",
+    "/index.html",
+    "/README.md",
+    "/test/"
+  ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.1.0"
+    "polymer": "^1.6.0",
+    "cordova-core": "^1.1.5"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0"
