Update README. Update dependencies.

--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,6 @@
     "cordova-core": "^1.1.5"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0"
+    "iron-component-page": "^1.1.7"
   }
 }
