--- a/bower.json
+++ b/bower.json
@@ -4,9 +4,8 @@
   "authors": [
     "Adrian de la Rosa <adrian@delarosab.me>"
   ],
-  "description": "Demo of cordova-core",
+  "description": "Demo of cordova-battery",
   "main": "index.html",
-  "moduleType": [],
   "license": "MIT",
   "private": true,
   "dependencies": {
